--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,15 +2,16 @@
 # defaults file for mariuszczyz.sshd-hardening
 
 # set to true if you want to disable root SSH login
-DISABLE_ROOT:
+DISABLE_ROOT: true
 
 # set to a numerical value in seconds, 300 is a good and balanced target
-ADJUST_IDLE:
-ALIVE_INTERVAL: # idle session timeout, example: 300
-ALIVE_COUNT_MAX: # idle check count, example: 5
+ADJUST_IDLE: 300
+ALIVE_INTERVAL: 300 # idle session timeout, example: 300
+ALIVE_COUNT_MAX: 5 # idle check count, example: 5
 
-# add all usernames allowed to SSH into the server, all users one single line with blank space seperation
-SSH_USERS:
+# add all usernames allowed to SSH into the server, all users one single line with blank space seperation:
+# SSH_USER: bob john joebagofdonuts
+SSH_USERS: user
 
 # security by obscurity but anything is better than nothing in limiting SSH service from port scans
 # keep in mind if this is set to anything else than the default 22 the ansible-playbook command will
@@ -18,7 +19,7 @@ SSH_USERS:
 SSH_PORT: 22
 
 # setting this will make sure only the SSH key owner will be able to SSH, the same way AWS does it
-DISABLE_PASSWORD:
+DISABLE_PASSWORD: true
 
 # no X on a server, let's disable this
-DISABLE_X11_FORWARDING:
+DISABLE_X11_FORWARDING: true
